# espdrone-nh

./: README.md  sdkconfig.defaults
components/config/include/: config.h  nvicconf.h
components/core/espdrone/: CMakeLists.txt
components/drivers/deck/: CMakeLists.txt  deck_spi.c
components/drivers/general/adc/: CMakeLists.txt  adc_esp32.c
components/drivers/general/buzzer/: CMakeLists.txt
components/drivers/general/led/: led_esp32.c
components/drivers/general/motors/: CMakeLists.txt  motors.c
components/drivers/general/wifi/: CMakeLists.txt  http.c  udp.c  wifi_esp32.c
components/drivers/i2c_bus/: i2c_drv.c  i2cdev_esp32.c
components/drivers/i2c_devices/eeprom/: eeprom.c
components/drivers/i2c_devices/hmc5883l/: hmc5883l.c
components/drivers/i2c_devices/mpu6050/: mpu6050.c
components/drivers/i2c_devices/ms5611/: CMakeLists.txt  ms5611.c
components/drivers/i2c_devices/vl53l0/: CMakeLists.txt  vl53l0x.c  (+1 more)
components/lib/esp32-camera/: Kconfig
components/platform/: CMakeLists.txt  platform.c  platform_ed2.c  stm32_legacy.h
components/utils/: CMakeLists.txt  clockCorrectionEngine.c  configblockeeprom.c  configblockflash.c  debug_ed.c  edassert.c  eprintf.c  num.c  statsCnt.c
components/utils/include/: debug_cf.h  debug_ed.h  edassert.h  eprintf.h  statsCnt.h
components/utils/lighthouse/: lighthouse_calibration.c  lighthouse_geometry.c  ootx_decoder.c  pulse_processor.c  pulse_processor_v1.c  pulse_processor_v2.c
components/utils/tdoa/: tdoaEngine.c  tdoaStats.c  tdoaStorage.c
docs/nh/: http_stream.md
main/: Kconfig.projbuild  main.c
(+170 files in other folders)
